--- a/assignment -12/css/style.css
+++ b/assignment -12/css/style.css
@@ -85,9 +85,9 @@ header {
     font-family: 'Roboto Condensed', sans-serif;
 }
 .main-container {
-    margin-top: 5em;
+    margin-top: 4em;
     padding: 1em;
-    line-height: 1.4em;
+    line-height: 1em;
 }
 .site-brand {
    margin-bottom: 2em;
@@ -100,10 +100,11 @@ header {
     background-color: white;
     width: 100%;
     margin: auto;
-    padding: 1px;
+    padding: 0.5px;
 
 }
 
 .words {
   font-family: 'Roboto Condensed', sans-serif;
+  font-size: 12pt;
 }
