--- a/assignment-final/css/style.css
+++ b/assignment-final/css/style.css
@@ -1,4 +1,12 @@
 /* Style the page: */
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 body {
     font-size: 10pt;
     margin: 0;
@@ -115,7 +123,7 @@ header {
 
 .photo {
     background-color: white;
-    width: 105%;
+    max-width: 100%;
     margin: auto;
     padding: .5px;
 
